--- a/style.css
+++ b/style.css
@@ -1,237 +1,147 @@
-html,
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Noto Sans', sans-serif;  
+@import url('https://fonts.googleapis.com/css2?family=Bad+Script&family=Cormorant:wght@400;700&family=Herr+Von+Muellerhoff&display=swap');
+@font-face {
+    font-family: "Nueva";
+    src: url("font/Miama\ Nueva.ttf")
+           
+   }
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    background-color: #c4c7e2;
 }
 
-a {
-  text-decoration: none;
+.wrapper{
+    background-color: #c4c7e2;
+    margin: 0 auto;
+    display: flex;
+    max-width: 1600px;
+    height: 100vh;
+    justify-content: space-evenly;
+}
+.bg{
+position: relative;
+    width: 70%;
+    margin :auto 0;
+    padding: 0 20px;
+    background: linear-gradient(#ffffff, #b3adec);
+    box-shadow: -1px -1px 64px 0px rgba(0, 0, 0, 0.5);
+    text-align: center;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
+h1{
+   font-family: 'Cormorant', serif;
+   font-size: 180px;
+   color: #b3adec59;
+   line-height: 180px;
+}
+hr{
+    margin: 0 auto;
+    width: 15%;
+    margin-top: 3%;
+    border-color:#b3adec59 ;
+}
+.slogan{
+    width: 100%;
+    font-family: 'Herr Von Muellerhoff', cursive;
+    font-size: 80px;
+    line-height: 80px;
+    color: #37316ae6;
+    text-align: center;
+    position: absolute;
+    top: 13%;
+    left: 0;
+    
 }
 
-h2 {
-  color: #2A3D8F;
-  font-size: 36px;
-  line-height: 49px;
+.expensive{
+    font-family: 'Cormorant', serif;
+    font-weight: 700;
+    font-size: 20px;
+
 }
 
-h3 {
-  font-size: 30px;
-  line-height: 41px;
+.name{
+    font-family: 'Nueva';
+    font-size: 4vw;;
+    margin-bottom: 20px;
+    color: #37316ae6;
 }
 
-.container {
-  width: 1200px;
-  margin: 0 auto;
+.desc {
+    
+    font-family: 'Cormorant', serif;
+    font-weight: 400;
+    font-size: 20px;
+    color: #37316ae6;
+
 }
-.page-header {
-  margin-top: 10px;  
-  display: flex;
-  /* justify-content: flex-start; */
+.minimum{
+    margin: 2% auto;
+  width: 80%;
 }
-.main-menu{
-  /*занимаем оставшееся место в блоке*/
-  flex-grow: 1;
-}
-.main-menu-list {
-  list-style: none;
-  padding: 0;
-  display: flex;
-  justify-content: space-around;
+span{
+    font-size: 5vw;
+    margin-bottom: 20px;
+    color: #37316ae6;
 }
 
-.main-menu-list a {
-  font-size: 30px;
-  line-height: 41px;
-  color: #2A3D8F;
+img{
+    width: 100px;
+    color: #37316ae6;
+}
+.container{
+display: flex;
+justify-content: space-evenly;
+margin-top: 2%
+
+}
+.footer{
+    margin-top:10px;
+    margin-bottom: 15px;
 }
 
-.main-menu-list a:hover {
-  color: #3893cc;
-}
+@media (max-width: 900px) { 
+    .wrapper{
+        width: 100%;
+        flex-direction: column;
+        
 
-.slogan {
-  height: 558px;
-  background-image: url(img/innsbruck1.png);
-  background-color: #dbe8f7;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
+    }
+    .bg{
+        margin: 10px auto;
+       width:  90%;
+    }
 
-.slogan h1 {
-  margin: 0;
-  padding-top: 240px;
-  font-size: 60px;
-  line-height: 82px;
-  color: #FFFFFF;
-}
-.wrapper {
-  display: flex;
-  justify-content: space-between;
-}
+ }
+ 
+@media (max-width: 600px) { 
+    
+    h1{
+        font-size: 25vw;
+    }
+    .slogan{
+       font-size: 10vw;
+        
 
-.about-numbers-list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  padding-left: 20px;
-}
+    }
+   
 
-.about-numbers-list li::before {
-  content: "✓";
-  /* отступ между галочкой и текстом */
-  margin-right: 3px;
-}
+ }
 
-.marketing {
-  display: flex;
-  flex-direction: column;
-  background-image: url(img/skier.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center right;
-  width: 30%;
-}
+ @media (max-width: 462px) { 
+    
+   
+    .container{
 
-.marketing p {
-  margin: 0;
-  padding: 5px;
-  text-transform: uppercase;
-  font-size: 2vw; 
-  line-height: 33px;
-}
+    flex-direction: column;
+    }
+    .pigeon{
+        display: none;
+    }
 
-.marketing a {
-  text-transform: uppercase;
-  display: inline-block;
-  margin-top: 60px;
-  padding: 5px 10px;
-  background-color: #fff;
-  opacity: 0.7; 
-  /* эгоистическое выравнивание элемента вдоль поперечной оси */
-  align-self: flex-end;
-  color: #000000;
-}
 
-.about-wether-graph {
-  border: thin #c0c0c0 solid;
-  display: flex;
-  flex-direction: column;
-  margin: 0;
-}
-.about-wether-graph figcaption {
-  font-size: 22px;
-  line-height: 33px;
-  background-color: rgb(124, 124, 124);
-  color: #fff;	
-  padding: 5px;
-  text-align: center;
-}
-
-.gallery-list {
-  display: flex;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  flex-direction: column;
-}
-
-.gallery-item {
-  display: flex;
-  margin: 0;
-  padding: 0;
-  margin-bottom: 10px;
-  flex-direction: row;
-  align-items: center;
-  min-height: 256px;
-  text-align: center;
-  color: #ffffff;
-  background-color: #B5D4C5;
-}
-
-.gallery-item h3 {
-  text-transform: uppercase;
-  width: auto;
-  flex-grow: 1;
-}
-
-.transfer {
-  border-collapse: collapse;
-  margin:0 auto;
-  margin-bottom: 20px;
-}
-
-.transfer thead {
-  background-color: rgb(32, 46, 92);
-  color: #fff;
-}
-.transfer span{
-  display: none;
-}
-.transfer td,th {
-  border: 1px solid #333;
-  padding: 5px;
-  text-align: center;
-  width: 25%;
-}
-
-/* homework_3 */
-/* .transfer td:first-child {
-  text-align: left;
-}
-
-.transfer tr:nth-child(odd) {
-  background-color: rgba(62, 64, 71, 0.322);
-}
-
-.transfer tr:nth-child(even) {
-  background-color: rgba(2, 139, 252, 0.322);
-}
-*/
-
-.footer-wrapper {
-  background-color: #B5D4C5;  
-} 
-
-.page-footer {
-  display: flex;  
-  /* Равномерно распределяет все элементы по ширине flex-блока.
-  Все элементы имеют равное пространство вокруг */
-  justify-content: space-evenly;  
-  padding: 35px 0;
-  color: #000000;
-}
-
- .hashtag {
-  margin: 0;
-  padding: 0;
-  font-size: 21px;
-  line-height: 26px;
-  font-weight: 700;
-  text-transform: uppercase;
-} 
-
- .footer-social {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  justify-content: center;
-} 
-
-.social-button {
-  margin: 0px 10px;
-}
-
-.copyright {
-  margin: 0;
-  padding: 0;  
-  font-size: 14px;
-  line-height: 26px;
-  font-weight: 400;
-}
+ }
