--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ body{
 .bg{
     position: relative;
     align-self:center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    
     width: 35%;
     background: linear-gradient(#ffffff, #b3adec);
     box-shadow: -1px -1px 64px 0px rgba(0, 0, 0, 0.5);
