--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ margin-top: 10px
     }
 
     .bg{
-        width: 70%;
+        width: 90%;
     }
 
     .bg h2{
@@ -251,5 +251,9 @@ margin-top: 10px
     .color{
         flex-direction: column;
         align-items: center;
+    }
+
+    span{
+font-size: 30px;
     }
 }
